--- a/01-ec2-r53.yml
+++ b/01-ec2-r53.yml
@@ -20,19 +20,31 @@
     loop: "{{ instances }}"
     register: ec2_output
 
-  - name : printing the ec2 output
-    ansible.builtin.debug:
-      msg: "{{ ec2_output }}"
+  # - name : printing the ec2 output
+  #   ansible.builtin.debug:
+  #     msg: "{{ ec2_output }}"
 
-  - name : printing the public ip
-    ansible.builtin.debug:
-      msg: "{{ item.instances[0].public_ip_address }}"
+  # - name : printing the public ip
+  #   ansible.builtin.debug:
+  #     msg: "{{ item.instances[0].public_ip_address }}"
+  #   loop: "{{ ec2_output.results }}"
+
+  # - name : printing the private ip
+  #   ansible.builtin.debug:
+  #     msg: "{{ item.instances[0].private_ip_address }}"
+  #   loop: "{{ ec2_output.results }}"
+
+  - name: creating r53 record
+    amazon.aws.route53:
+      state: present
+      zone: "{{ domain_name }}"
+      record: {{ item.item }}.{{ domain_name }}
+      type: A
+      ttl: 1
+      value: "{{ item.instances[0].private_ip_address }}"
+      overwrite: true
     loop: "{{ ec2_output.results }}"
 
-  - name : printing the private ip
-    ansible.builtin.debug:
-      msg: "{{ item.instances[0].private_ip_address }}"
-    loop: "{{ ec2_output.results }}"
-
-    
+ 
+      
 
