--- a/inventory.ini
+++ b/inventory.ini
@@ -1,18 +1,20 @@
-[catalogue]
-172.31.24.157
-172.31.24.157
-172.31.24.157
-172.31.24.157
-172.31.24.157
+[mysql]
+mysql.awspractice.store
 
-[frontend]
-172.31.25.118
+[rabbitmq]
+rabbitmq.awspractice.store
 
+[redis]
+redis.awspractice.store
 
-[cart]
-172.31.24.157
+[mongodb]
+mongodb.awspractice.store
+
 
 [local]
 localhost
 
-[local:vars]
+
+[all:vars]
+ansible_user=ec2-ansible_user
+ansible_password=DevOps321
