--- a/inventory.ini
+++ b/inventory.ini
@@ -10,6 +10,15 @@ redis.awspractice.store
 [mongodb]
 mongodb.awspractice.store
 
+[catalogue]
+catalogue.awspractice.store
+
+[user]
+user.awspractice.store
+
+[cart]
+cart.awspractice.store
+
 
 [local]
 localhost
