--- a/catalogue.yml
+++ b/catalogue.yml
@@ -35,3 +35,32 @@
         src: /tmp/catalogue.zip
         dest: /app
         remote_src: yes
+
+    - name: insatll dependencies
+      community.general.npm:
+        path: /app
+
+    - name: copy catalogue file
+      ansible.builtin.copy:
+        src: catalogue.service
+        dest: /etc/systemd/system/catalogue.service
+    
+    - name: copy mongo repo
+      ansible.builtin.copy:
+        src: mongo.repo
+        dest: /etc/yum.repos.d/mongo.repo
+
+    - name: install mongosh client
+      ansible.builtin.package:
+        name: mongodb-mongosh
+        state: present
+
+    - name: connect to catalouge mongodb
+      ansible.builtin.command: (mongosh mongodb.awspractice.store --quiet --eval "db.getMongo().getDBNames().indexOf('catalogue')
+      register: catalogue_output
+     
+    - name: print the catalogue output
+      ansible.builtin.debug:
+        msg: "{{ catalogue_output }}" 
+
+
