--- a/catalogue.yml
+++ b/catalogue.yml
@@ -56,7 +56,7 @@
         state: present
 
     - name: connect to catalouge mongodb
-      ansible.builtin.command: (mongosh mongodb.awspractice.store --quiet --eval "db.getMongo().getDBNames().indexOf('catalogue')
+      ansible.builtin.command: mongosh mongodb.awspractice.store --quiet --eval "db.getMongo().getDBNames().indexOf('catalogue')"
       register: catalogue_output
      
     - name: print the catalogue output
