--- a/catalogue.yml
+++ b/catalogue.yml
@@ -59,8 +59,12 @@
       ansible.builtin.command: mongosh mongodb.awspractice.store --quiet --eval "db.getMongo().getDBNames().indexOf('catalogue')"
       register: catalogue_output
      
-    - name: print the catalogue output
-      ansible.builtin.debug:
-        msg: "{{ catalogue_output }}" 
+    # - name: print the catalogue output
+    #   ansible.builtin.debug:
+    #     msg: "{{ catalogue_output }}" 
+
+    - name: load products into mongodb
+      ansible.builtin.shell: mongosh --host MONGODB-SERVER-IPADDRESS </app/db/master-data.js
+      when: catalogue_output.stdout < 0
 
 
