--- a/catalogue.yml
+++ b/catalogue.yml
@@ -64,7 +64,7 @@
     #     msg: "{{ catalogue_output }}" 
 
     - name: load products into mongodb
-      ansible.builtin.shell: mongosh --host MONGODB-SERVER-IPADDRESS </app/db/master-data.js
+      ansible.builtin.shell: mongosh --host mongodb.awspractice.store </app/db/master-data.js
       when: catalogue_output.stdout < 0
 
 
