--- a/catalogue.yml
+++ b/catalogue.yml
@@ -65,6 +65,6 @@
 
     - name: load products into mongodb
       ansible.builtin.shell: mongosh --host mongodb.awspractice.store </app/db/master-data.js
-      when: catalogue_output.stdout < 0
+      when: catalogue_output.stdout |  int < 0
 
 
