--- a/catalogue.yml
+++ b/catalogue.yml
@@ -67,4 +67,10 @@
       ansible.builtin.shell: mongosh --host mongodb.awspractice.store </app/db/master-data.js
       when: catalogue_output.stdout |  int < 0
 
+    - name: start and enabled catalogue service
+      ansible.builtin.service:
+        name: catalogue
+        state: started
+        enabled: yes
+
 
