--- a/catalogue.yml
+++ b/catalogue.yml
@@ -20,11 +20,22 @@
         shell: /sbin/nologin
         system: true
         home: /app
+# safe to remove the directory, 2 nd time we run it will download freshly. if does not exist no error.
+    - name: delete the directory
+      ansible.builtin.file:
+        path: /app
+        state: absent
 
     - name: creating directory
       ansible.builtin.file:
         state: directory
         path: /app
+
+    - name: removing the catalouge file
+      ansible.builtin.file:
+        path: /tmp/catalogue.zip 
+        state: absent
+
     - name: downloading catalogue application
       ansible.builtin.get_url:
         url: https://roboshop-artifacts.s3.amazonaws.com/catalogue-v3.zip 
@@ -68,9 +79,10 @@
       when: catalogue_output.stdout |  int < 0
 
     - name: start and enabled catalogue service
-      ansible.builtin.service:
+      ansible.builtin.systemd_service:
         name: catalogue
         state: started
         enabled: yes
+        daemon_reload: true
 
 
