--- a/inventory.ini
+++ b/inventory.ini
@@ -19,6 +19,15 @@ user.awspractice.store
 [cart]
 cart.awspractice.store
 
+[shipping]
+shipping.awspractice.store
+
+[payment]
+payment.awspractice.store
+
+[frontend]
+frontend.awspractice.store
+
 
 [local]
 localhost
