--- a/payment.yml
+++ b/payment.yml
@@ -1,5 +1,5 @@
-- name: configuring shipping server
-  hosts: shipping
+- name: configuring payment server
+  hosts: payment
   become: yes
   tasks:
   - name: installing maven
@@ -9,11 +9,10 @@
     loop:
     - maven
     - mysql
-
   - name: installing python mysql libraries
     ansible.builtin.pip:
       name: "{{ item }}"
-      executable: pip3.9
+      executable: pip3.13
     loop:
     - PyMySQL
     - cryptography
@@ -53,39 +52,3 @@
       src: /tmp/shipping.zip
       dest: /app
       remote_src: true
-
-
-  - name: installing dependencies
-    ansible.builtin.command: mvn clean package
-    args:
-        chdir: /app
-
-  - name: move the jar files
-    ansible.builtin.command: mv target/shipping-1.0.jar shipping.jar
-    args:
-        chdir: /app
-
-  - name: copy user service file
-    ansible.builtin.copy:
-      src: shipping.service
-      dest: /etc/systemd/system/shipping.service
-
-  - name : load shipping data into my sql
-    community.mysql.mysql_db:
-      state: import
-      name: all
-      login_host: mysql.awspractice.store
-      login_user: uroot 
-      login_password: pRoboShop@1 
-      target: "{{ item }}"
-    loop:
-    - /app/db/schema.sql
-    - /app/db/app-user.sql 
-    - /app/db/master-data.sql
-
-  - name: daemon reload and start services
-    ansible.builtin.systemd_service:
-      state: started
-      name: user 
-      enabled: yes
-      daemon_reload: true
