--- a/shipping.yml
+++ b/shipping.yml
@@ -75,7 +75,7 @@
       state: import
       name: all
       login_host: mysql.awspractice.store
-      login_user: uroot 
+      login_user: root 
       login_password: pRoboShop@1 
       target: "{{ item }}"
     loop:
