--- a/shipping.yml
+++ b/shipping.yml
@@ -76,7 +76,7 @@
       name: all
       login_host: mysql.awspractice.store
       login_user: root 
-      login_password: pRoboShop@1 
+      login_password: RoboShop@1 
       target: "{{ item }}"
     loop:
     - /app/db/schema.sql
