--- a/shipping.yml
+++ b/shipping.yml
@@ -86,6 +86,6 @@
   - name: daemon reload and start services
     ansible.builtin.systemd_service:
       state: started
-      name: user 
+      name: shipping 
       enabled: yes
       daemon_reload: true
