--- a/payment.yml
+++ b/payment.yml
@@ -10,7 +10,7 @@
     - python3
     - gcc
     - python3-devel
-    
+
   - name: adding robosho user
     ansible.builtin.user:
         name: roboshop
@@ -49,7 +49,7 @@
   - name: installing dependencies
     ansible.builtin.pip:
       requirements: requirements.txt
-      executable: 3.9
+      executable: pip3.9
     args:
       chdir: /app
 
