--- a/frontend.yml
+++ b/frontend.yml
@@ -44,12 +44,12 @@
       src: nginx.conf
       dest: /etc/nginx/nginx.conf
 
-  - name: daemon reload and start services
-    ansible.builtin.systemd_service:
+  - name: restart ngix
+    ansible.builtin.service:
       state: started
       name: frontend 
       enabled: yes
-      daemon_reload: true
+      
 
   
 
