--- a/frontend.aws_ec2.yml
+++ b/frontend.aws_ec2.yml
@@ -1,8 +1,8 @@
 plugin: amazon.aws.aws_ec2
 regions:
-  - us-east-1
+- us-east-1
 filters:
-  tag:Environment: dev
+  tag:Environment: frontend
   instance-state-name : running
 hostnames:
   - private-ip-address
