--- a/frontend.aws_ec2.yml
+++ b/frontend.aws_ec2.yml
@@ -2,9 +2,13 @@ plugin: amazon.aws.aws_ec2
 regions:
 - us-east-1
 filters:
-  tag:Environment: frontend
+  tag:Name: frontend
   instance-state-name : running
 hostnames:
   - private-ip-address
 compose:
   ansible_host: private_ip_address
+keyed_groups:
+  - key: tags.Name
+    prefix: "dynamic"
+    separator: "_"
